# plast-mem

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  cspell.config.yaml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.eslint.json  tsconfig.json
.agents/skills/plastmem-event-segmentation-debug/: SKILL.md
benchmarks/event-segmentation/: README.md
benchmarks/event-segmentation/fixtures/: smoke.json
benchmarks/locomo/: README.md  package.json  tmp_analysis.cjs  tsconfig.json
benchmarks/locomo/benchmarks/locomo/results/: conv-49-run-a.json  conv-49-run-b.json
benchmarks/locomo/doc/: 2026-04-06_v2_experiment_log.md  research_log.md
benchmarks/locomo/src/: checkpoint.ts  cli.ts  concurrency.ts  dashboard.ts  evaluation.ts  export-memories.ts  full-context.ts  ingest.ts  llm.ts  retrieve.ts  runner.ts  schemas.ts  stats.ts  types.ts  wait.ts
benchmarks/longmemeval/: package.json
benchmarks/longmemeval/src/: checkpoint.ts  cli.ts  evaluation.ts  ingest.ts  llm.ts  retrieve.ts  stats.ts  types.ts
benchmarks/longmemeval/src/utils/: dataset.ts
crates/ai/: Cargo.toml  README.md
crates/ai/src/: cosine_similarity.rs  embed.rs  embed_batch.rs  embed_many.rs  embed_shared.rs  generate_object.rs  generate_text.rs  lib.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: conversation_message.rs  lib.rs  message.rs  message_ingest.rs  message_queue.rs  message_segmenter.rs  pending_review_queue.rs  segmentation.rs  segmentation_state.rs
crates/core/src/memory/: boundary.rs  creation.rs  episodic.rs  mod.rs  retrieval.rs  semantic.rs
crates/core/src/memory/episodic/: creation.rs  mod.rs
crates/core/src/memory/semantic/: consolidation.rs  mod.rs
crates/core/src/message_queue/: boundary.rs  check.rs  mod.rs  pending_reviews.rs  segmentation.rs  state.rs
crates/db_migration/src/: lib.rs  m20260206_02_create_episodic_memory_table.rs  m20260211_01_create_bm25_index.rs  m20260211_01_create_episodic_memory_bm25_index.rs  m20260212_01_add_fsrs_columns_to_episodic_memory.rs
crates/db_schema/src/: episodic_memory.rs
crates/entities/: Cargo.toml  README.md
crates/entities/src/: conversation_message.rs  episode_classification.rs  episode_span.rs  episodic_memory.rs  lib.rs  message_queue.rs  pending_review_queue.rs  prelude.rs  segmentation_state.rs  semantic_memory.rs
crates/event/: Cargo.toml
crates/event-segmentation/: Cargo.toml
crates/event-segmentation/src/: lib.rs  segmentation_debug.rs  tests.rs
crates/event/src/: lib.rs
crates/event/src/data/: message.rs  mod.rs
crates/event_segmentation/: Cargo.toml
crates/event_segmentation/src/: batch_segmentation.rs  event.rs  event_segment.rs  event_segmenter.rs  lib.rs
crates/event_segmentation/src/legacy/: format_messages.rs  mod.rs  segmentation_plan.rs  surprise_level.rs
crates/llm/: Cargo.toml
crates/llm/src/: embed.rs  generate_text.rs  lib.rs
crates/migration/: Cargo.toml  README.md
crates/migration/src/: lib.rs  m20260206_01_create_message_queue_table.rs  m20260206_02_create_episodic_memory_table.rs  m20260213_01_add_pending_reviews_to_message_queue.rs  m20260215_01_add_event_model_to_message_queue.rs  m20260215_02_add_title_to_episodic_memory.rs  m20260215_03_add_event_model_embedding_to_message_queue.rs  m20260216_01_create_message_queue_table.rs  m20260216_02_create_episodic_memory_table.rs  m20260218_01_create_semantic_memory_table.rs  m20260218_02_add_consolidated_at_to_episodic_memory.rs  m20260228_01_refactor_semantic_memory.rs  m20260305_01_refactor_episodic_memory_search.rs  m20260315_01_align_episodic_content.rs  m20260328_01_restore_semantic_fact_bm25.rs  m20260405_01_event_segmentation_v2.rs  m20260417_01_create_conversation_message_table.rs  m20260417_02_create_segmentation_state_table.rs  m20260417_03_create_episode_span_table.rs  m20260417_04_create_pending_review_queue_table.rs  m20260417_05_create_episodic_memory_table.rs  m20260417_06_create_semantic_memory_table.rs  main.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: lib.rs  server.rs
crates/server/src/api/: add_message.rs  benchmark.rs  mod.rs  recent_memory.rs  retrieve_memory.rs  segmentation_state.rs
crates/server/src/utils/: shutdown_signal.rs  state.rs
crates/shared/: Cargo.toml  README.md
crates/shared/src/: env.rs  error.rs  lib.rs  message.rs  similarity.rs
crates/worker/: Cargo.toml  README.md
crates/worker/src/: lib.rs
crates/worker/src/jobs/: episode_creation.rs  event_segmentation.rs  memory_review.rs  mod.rs  predict_calibrate.rs  semantic_consolidation.rs  semantic_extraction.rs
docs/: ARCHITECTURE.md  CHANGE_GUIDE.md  ENVIRONMENT.md  TYPESCRIPT.md  role_play.md
docs/architecture/: daily_memory_optimizations.md  episodic_memory.md  fsrs.md  graph_memory.md  longmemeval_optimizations.md  memory_review.md  retrieve_memory.md  segmentation.md  semantic_memory.md
docs/todo/: boundary_types.md  flashbulb_memory.md  memory_review.md  procedural_memory.md  semantic_memory.md  semantic_memory_confidence.md  semantic_memory_extension.md  surprise.md  tool_result_format.md
examples/haru/: README.md  package.json  tsconfig.json
examples/haru/src/: chat.tsx  index.tsx  plastmem.ts  vite-env.d.ts
examples/haru/src/components/: debug-history-panel.tsx  header.tsx  message.tsx
examples/haru/src/core/: prompt-builder.test.ts  prompt-builder.ts  prompt.ts
examples/haru/src/core/__snapshots__/: prompt-builder.test.ts.snap
examples/haru/src/docs/: PROMPT.md
examples/haru/src/hooks/: use-dotenv-storage.ts  use-haru.ts  use-terminal-title.ts
examples/haru/src/utils/: dotenv-storage.ts
src/: core.rs  main.rs  server.rs  state.rs  worker.rs
src/api/: add_message.rs  mod.rs  retrieve_memory.rs  retrieve_memory_raw.rs
src/core/: episodic_memory.rs  memory_state.rs  message_queue.rs  message_segmenter.rs  mod.rs
src/core/memory/: episodic.rs  mod.rs
src/services/: mod.rs  retrieval.rs  reviewer.rs
src/utils/: error.rs  mod.rs  shutdown_signal.rs  state.rs
