[workspace.package]
version = "0.0.1"
authors = ["Moeru AI"]
edition = "2024"
rust-version = "1.91"
description = ""
documentation = "https://github.com/moeru-ai/plast-mem"
readme = "README.md"
homepage = "https://github.com/moeru-ai/plast-mem"
repository = "https://github.com/moeru-ai/plast-mem"
license = "MIT"
publish = false

[package]
name = "plast-mem"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "./crates/core",
  "./crates/db_migration",
  "./crates/db_schema",
  "./crates/llm",
  "./crates/shared",
  "./crates/worker",
  ".",
]

[workspace.dependencies]
plast_mem_core.path = "./crates/core"
plast_mem_db_migration.path = "./crates/db_migration"
plast_mem_db_schema.path = "./crates/db_schema"
plast_mem_llm.path = "./crates/llm"
plast_mem_shared.path = "./crates/shared"
plast_mem_worker.path = "./crates/worker"
anyhow = "1.0.100"
apalis = "1.0.0-rc.3"
apalis-postgres = { version = "1.0.0-rc.3", features = ["time"] }
axum = { version = "0.8.8", features = ["macros"] }
async-openai = "0.28.0"
sea-orm-migration = { version = "2.0.0-rc.30", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
sea-orm = { version = "2.0.0-rc.30", features = [
  # https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime/#database_driver
  "sqlx-postgres",
  # https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime/#async_runtime
  "runtime-tokio-rustls",
  # https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime/#extra-features
  "macros",
  "with-chrono",
  "with-json",
  "with-uuid",
  "postgres-vector",
] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }

[dependencies]
plast_mem_core.workspace = true
plast_mem_db_migration.workspace = true
plast_mem_db_schema.workspace = true
plast_mem_llm.workspace = true
plast_mem_shared.workspace = true
plast_mem_worker.workspace = true
anyhow.workspace = true
apalis.workspace = true
apalis-postgres.workspace = true
axum.workspace = true
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
fsrs = "5.2.0"
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["serde", "v4", "v7"] }
futures = "0.3.31"
