[package]
name = "plastmem_ai"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "plastmem_ai"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-openai.workspace = true
plastmem_shared.workspace = true
schemars.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
