[package]
name = "plast_mem_core"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "plast_mem_core"
path = "src/lib.rs"

[dependencies]
plast_mem_db_schema.workspace = true
plast_mem_llm.workspace = true
plast_mem_shared.workspace = true
anyhow.workspace = true
chrono.workspace = true
fsrs.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
