[package]
name = "plastmem_core"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "plastmem_core"
path = "src/lib.rs"

[dependencies]
plastmem_entities.workspace = true
plastmem_ai.workspace = true
plastmem_shared.workspace = true
anyhow.workspace = true
chrono.workspace = true
chrono-humanize.workspace = true
fsrs.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
utoipa.workspace = true
