[package]
name = "plast_mem_llm"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "plast_mem_llm"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-openai.workspace = true
plast_mem_shared.workspace = true
sea-orm.workspace = true
serde.workspace = true
