[package]
name = "plastmem_shared"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "plastmem_shared"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
serde.workspace = true
